--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,102 @@
 
+* {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+textarea,
+input:focus,
+input:focus {
+  outline: none;
+}
+.navbar {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  /*   background-color: beige; */
+}
+.brand {
+  grid-column: 2;
+  margin: auto;
+}
+.brand img {
+  height: 2rem;
+}
+.navbar ul {
+  display: flex;
+  grid-column-start: 3;
+  list-style: none;
+  gap: 2rem;
+  margin: 1rem auto;
+}
+.search {
+  background-color: beige;
+  margin-top: 1rem;
+}
+.search-content {
+  background-image: url("https://shtheme.com/demosd/orgafewp/wp-content/themes/orgafe/img/bg/bg15.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  padding: 50px 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.search-text {
+  margin: 1rem auto;
+  text-align: center;
+}
+#search {
+  position: relative;
+  left: 3rem;
+  width: 20rem;
+  padding: 0 1rem;
+  height: 3rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-radius: 1rem;
+}
+.submit {
+  position: relative;
+  right: 4rem;
+  border: none;
+  background-color: rgb(249, 163, 31);
+  color: white;
+  border-radius: 1.5rem;
+  padding: 0.5rem 1.5rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+.search-text {
+  font-size: 3rem;
+}
+.cards {
+  margin: 2rem 8rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 2rem;
+}
+.card {
+  background-color: #f1f6fa;
+  border-radius: 10px;
+  text-align: center;
+  padding: 2rem;
+}
+.card-img img {
+  max-width: 12rem;
+}
+.footer {
+  padding: 2rem 0;
+  text-align: center;
+  background-image: url("https://shtheme.com/demosd/orgafewp/wp-content/themes/orgafe/img/bg/bg5.jpg");
+  background-size: cover;
+  background-position: center;
+}
